<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_InputTemperature"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/key_lebel_inputTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/key_input_T"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_InputTemperature" />

    <Button
        android:id="@+id/button2"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:onClick="action_convert"
        android:text="@string/key_button_convert"
        app:layout_constraintEnd_toStartOf="@+id/switchAuto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <TextView
        android:id="@+id/label_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/key_label_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/label_finalResult"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/key_result"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/spinnerExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_result" />

    <Spinner
        android:id="@+id/spinnerEntry"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:entries="@array/array_temp_unit"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/label_InputTemperature" />

    <Spinner
        android:id="@+id/spinnerExit"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:entries="@array/array_temp_unit"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_finalResult" />

    <Switch
        android:id="@+id/switchAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Auto-Convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>